Add logo and replace placeholder icon

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -46,13 +46,7 @@
       width: 36px;
       height: 36px;
       border-radius: 10px;
-      background: linear-gradient(135deg, var(--accent), #E8745A);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: 700;
-      font-size: 18px;
+      object-fit: contain;
     }
 
     .logo-text {
@@ -172,7 +166,7 @@
   <div class="container">
     <!-- Logo -->
     <div class="logo">
-      <div class="logo-icon">B</div>
+      <img src="./logo.png" alt="Boardy" class="logo-icon" />
       <span class="logo-text">Boardy</span>
     </div>
 
