Update contact email to boardy.music@gmail.com

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -276,11 +276,11 @@
       <li><strong>Correction</strong> - You can update inaccurate personal information</li>
       <li><strong>Withdraw Consent</strong> - You can withdraw consent for optional data processing at any time</li>
     </ul>
-    <p>To exercise any of these rights, contact us at <a href="mailto:privacy@boardy.app">privacy@boardy.app</a>.</p>
+    <p>To exercise any of these rights, contact us at <a href="mailto:boardy.music@gmail.com">boardy.music@gmail.com</a>.</p>
 
     <!-- 7 -->
     <h2>7. Children's Privacy</h2>
-    <p>Boardy is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If we discover that a child under 13 has provided us with personal data, we will promptly delete it. If you are a parent or guardian and believe your child has provided us with personal information, please contact us at <a href="mailto:privacy@boardy.app">privacy@boardy.app</a>.</p>
+    <p>Boardy is not intended for children under the age of 13. We do not knowingly collect personal information from children under 13. If we discover that a child under 13 has provided us with personal data, we will promptly delete it. If you are a parent or guardian and believe your child has provided us with personal information, please contact us at <a href="mailto:boardy.music@gmail.com">boardy.music@gmail.com</a>.</p>
 
     <!-- 8 -->
     <h2>8. International Data Transfers</h2>
@@ -328,7 +328,7 @@
     <h2>13. Contact Us</h2>
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or our data practices, please contact us:</p>
     <ul>
-      <li>Email: <a href="mailto:privacy@boardy.app">privacy@boardy.app</a></li>
+      <li>Email: <a href="mailto:boardy.music@gmail.com">boardy.music@gmail.com</a></li>
     </ul>
 
     <!-- Footer -->
