--- a/terms.html
+++ b/terms.html
@@ -265,7 +265,7 @@
     <h2>16. Contact</h2>
     <p>If you have any questions about these Terms of Service, please contact us:</p>
     <ul>
-      <li>Email: <a href="mailto:legal@boardy.app">legal@boardy.app</a></li>
+      <li>Email: <a href="mailto:boardy.music@gmail.com">boardy.music@gmail.com</a></li>
     </ul>
 
     <!-- Footer -->
